# 251-Lab1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  student.cpp  student.hpp
includes/: InternationalStudent.h  ToeflScore.h  student.h
res/: domestic-stu.txt  international-stu.txt
sources/: CMakeLists.txt  DomesticStudent.cpp  InternationalStudent.cpp  ToeflScore.cpp  main.cpp  student.cpp
sources/includes/: DomesticStudent.h  InternationalStudent.h  ToeflScore.h  student.h
