add_executable(lab1_download
        main.cpp DomesticStudent.cpp InternationalStudent.cpp student.cpp ToeflScore.cpp
        sources/student.cpp includes/ToeflScore.h includes/DomesticStudent.h includes/InternationalStudent.h sources/DomesticStudent.cpp sources/InternationalStudent.cpp sources/ToeflScore.cpp)